--- a/pocketsphinx/README
+++ b/pocketsphinx/README
@@ -1,4 +1,4 @@
-PocketSphinx 0.6.99 (development snapshot)
+PocketSphinx 0.7
 
 This is PocketSphinx, one of Carnegie Mellon University's open source
 large vocabulary, speaker-independent continuous speech recognition
